--- a/MySQL_Python/templates/welcome.html
+++ b/MySQL_Python/templates/welcome.html
@@ -14,6 +14,7 @@
       {% for message in get_flashed_messages() %}
         {{message}}
       {% endfor %}
+      <p>Click <a href="/signup">here</a> to sign up.</p>
     </div>
   </body>
 </html>
