Some improvements in the registration page and in 'update_user' function. Added 'script.js' to be used in signup.html.

--- a/MySQL_Python/templates/signup.html
+++ b/MySQL_Python/templates/signup.html
@@ -8,7 +8,7 @@
     <div class="container">
       <h1>Door Control System</h1>
       <br>
-      <h5>Type in your fiscal code and your temporary password.</h5>
+      <p>Type in your fiscal code and your temporary password.</p>
       <br>
       <form id = "auth-form" action="" method="post">
         <input type="text" placeholder="Fiscal Code" name="username" value="{{
@@ -19,22 +19,30 @@
       </form>
       <form id="details-form" action="/update_user" method="post" style="display: none;">
         <!-- Additional form fields go here -->
-        <label>Username:</label>
-        <input type="text" placeholder="Username" name="username">
-        <br>
-        <label>Phone number:</label>
-        <input type="text" placeholder="Phone Number" name="phone_number">
-        <br>
-        <label>E-mail:</label>
-        <input type="text" placeholder="E-mail" name="email">
-        <br>
+        <br /><p>Fill in all fields to complete the registration:</p><br />
+        <input type="text" placeholder="Username" name="username" required>
+        <input type="text" placeholder="Phone Number" name="phone_number" required><br />
+        <input type="text" placeholder="E-mail" id="email" name="email" required>
+        <input type="text" placeholder="Address" name="address" required><br />
+        <input type="date" placeholder="Birth date" id="date" name="birth_date" required max="2006-01-01">
+        <label for="gender">Gender</label>
+        <select id="gender" name="gender" required>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+          <option value="Other">Other</option>
+        </select><br /><br/>
+        <p>Choose your new password. The new password must be 8 to 16 characters long and contain at least<br>
+          one uppercase letter, one lowercase letter, one number, and one special character.</p><br/>
+        <input type="text" placeholder="New Password" name="new_password" required><br/>
+        <input type="text" placeholder="Repeat the new password" name="repeat" required><br/>
+        <input class="btn btn-default" type="reset" value="Reset">
         <input class="btn btn-default" type="submit" value="Submit">
       </form>
       {% if error %}
         <p class="error"><strong>Error:</strong> {{ error }}</p>
       {% endif %}
       {% for message in get_flashed_messages() %}
-        {{message}}
+          {{message}}
       {% endfor %}
       </div>
       <script>
