added get_all_roles function

--- a/MySQL_Python/templates/create_user.html
+++ b/MySQL_Python/templates/create_user.html
@@ -58,6 +58,8 @@
 		</div>
 
 		<div id="rfid_fields" style="display: none;">
+            <label for="door_id">Registration client ID:</label>
+			<input type="text" id="door_id" name="door_id"><br>
 		</div>
 
 		<label for="whitelist">Whitelist:</label>
