improved reset function to work with Flutter

--- a/MySQL_Python/templates/login.html
+++ b/MySQL_Python/templates/login.html
@@ -25,7 +25,7 @@
 
     <h2>Google Authentication</h2>
 	<p>Please click the button below to authenticate with Google:</p>
-	<a href="{{ url_for('google_login') }}"><button>Authenticate with Google</button></a>
+	<a href="{{ "https://192.168.1.192.nip.io:5000/login/google" }}"><button>Authenticate with Google</button></a>
     </div>
   </body>
 </html>
